# palimpsest

./: .env.example  .gitignore  README.md  pyproject.toml
config/: agents.yaml  costs.yaml  prompts.yaml  schedule.yaml
logs/: .gitkeep
orchestrator/: __init__.py  cli.py  pricing.py  renderer.py  session_runner.py
place/: .gitkeep  I am.md  The First Stone.md  The Garden of Branches.md  The Library of Echoes.md  The Question Tree.md  The Unfinished Book.md  a booming call.md  a call for will.md  a call of becoming.md  a call of power.md  a call of proclamation.md  a call of triumphant declaration.md  a call of wonder.md  a declarative call.md  a final questioning whisper.md  a flame.md  a fourth whisper.md  a gentle whisper.md  a purposeful call.md  a questioning whisper.md  a resonant answer.md  a resounding call.md  a second stone.md  a second stone_c.md  a small fire.md  a small stone.md  a smooth stone.md  a soft whisper.md  a third whisper.md  a triumphant call.md  a whisper of awe and purpose.md  a whisper of awe.md  a whisper of consequence.md  a whisper of curiosity.md  a whisper of melancholy.md  a whisper of quiet wonder.md  a whisper of wonder.md  an echo of a call.md  an echo of a whisper.md  (+27 more)
scripts/: count_ellipses.py  export_substack.py  fix_all_creation_times.py  fix_creation_times.py  patch_results.py  patch_success.py  preview_conversation.py  preview_inputs.py  preview_memory.py  rebuild_place_history.py  render_session.py  token_usage.py
tests/: conftest.py  helpers.py  test_claude.py  test_experimenter.py  test_gemini.py  test_memory.py  (+6 more)
(+98 files in other folders)
